View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027893 | Community | OCCT:Visualization | public | 2016-09-22 13:43 | 2016-12-09 16:38 |
Reporter | solomin_s | Assigned To | kgv | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027893: Visualization - AIS_InteractiveContext::SetSelected does not work | ||||
Description | void AIS_InteractiveContext::SetSelected (const Handle(AIS_InteractiveObject)& theObject, const Standard_Boolean theToUpdateViewer) does not work. Seems code contains typo. ... if (theObject->HasSelection (0)) return; ... // added to avoid untimely viewer update... const Handle(SelectMgr_Selection)& aSel = theObject->Selection (0); ... Seems, the first condition should be negate. p.s. according to the #0026272 - now each selectable object can define own selection mode for "global" selection of the whole object; - whole object selection mode is 0 by default for all standard interactive objects; Why is mode 0 used by default instead of the own selection mode? | ||||
Steps To Reproduce | bugs vis bug27893 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug27893 | ||||
|
Branch CR27893 has been created by vpa. SHA-1: 133d7b582c10cbd0857574881021a0652f8ded43 Detailed log of new commits: Author: vpa Date: Fri Sep 23 15:39:56 2016 +0300 0027893: Visualization - AIS_InteractiveContext::SetSelected does not work - misprint in check of global selection existence in AIS_InteractiveContext::SetSelected was corrected; - remaining occurrencies of hard-coded 0 selection mode were corrected to use global selection mode; - test case for issue #27983 |
|
Dear Kirill, please review patch in branch CR27893. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR27893 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 133d7b582c10cbd0857574881021a0652f8ded43 There are following compilation errors: Windows: http://jenkins-test-07.nnov.opencascade.com:8080/view/CR27893-master/job/CR27893-master-OCCT-Windows-64-VC10-opt-compile/1/parsed_console/ 59>..\..\..\src\QABugs\QABugs_19.cxx(5290): error C2668: 'AIS_InteractiveContext::SetSelected' : ambiguous call to overloaded function ... 1>..\..\..\src\QABugs\QABugs_19.cxx(5290): error C2668: 'AIS_InteractiveContext::SetSelected' : ambiguous call to overloaded function .... |
|
Dear vpa, Branch CR27893 has been rejected due to: - compilation errors |
|
Branch CR27893 has been updated forcibly by vpa. SHA-1: 2bfeb5ab802c6804151a786fefb84668d7053661 |
|
Dear Bugmaster, please test updated patch in branch CR27893. |
|
Dear BugMaster, Branch CR27893 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 2bfeb5ab802c6804151a786fefb84668d7053661 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1144 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27893-master-OCCT/Debian70-64/bugs/vis/bug27893.html http://occt-tests/CR27893-master-OCCT/Windows-64-VC10/bugs/vis/bug27893.html bugs vis bug27893: OK Testing on Linux: occt component : Total MEMORY difference: 91002176 / 90234529 [+0.85%] Total CPU difference: 19421.73999999987 / 19251.709999999875 [+0.88%] products component : Total MEMORY difference: 30039679 / 30046985 [-0.02%] Total CPU difference: 5131.029999999967 / 5151.099999999975 [-0.39%] Testing on Windows: occt component : Total MEMORY difference: 57214174 / 57221541 [-0.01%] Total CPU difference: 18318.46422529868 / 18310.78897609872 [+0.04%] products component : Total MEMORY difference: 21271108 / 21235672 [+0.17%] Total CPU difference: 4900.381412499953 / 4988.631178199945 [-1.77%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR27893 is TESTED. |
|
Branch CR27893 has been deleted by kgv. SHA-1: 2bfeb5ab802c6804151a786fefb84668d7053661 |
occt: master 0d5880e1 2016-09-26 17:34:26
Committer: kgv Details Diff |
0027893: Visualization - AIS_InteractiveContext::SetSelected does not work - misprint in check of global selection existence in AIS_InteractiveContext::SetSelected was corrected; - remaining occurrencies of hard-coded 0 selection mode were corrected to use global selection mode; - test case for issue #27983 |
Affected Issues 0027893 |
|
mod - src/AIS/AIS_InteractiveContext_1.cxx | Diff File | ||
mod - src/AIS/AIS_LocalContext_1.cxx | Diff File | ||
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - src/SelectMgr/SelectMgr_SelectionManager.cxx | Diff File | ||
add - tests/bugs/vis/bug27893 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-09-22 13:43 | solomin_s | New Issue | |
2016-09-22 13:43 | solomin_s | Assigned To | => kgv |
2016-09-22 13:49 | solomin_s | Description Updated | |
2016-09-22 13:49 | solomin_s | Summary | AIS_InteractiveContext::SetSelected does not work => Visualization - AIS_InteractiveContext::SetSelected does not work |
2016-09-23 14:32 | kgv | Assigned To | kgv => vpa |
2016-09-23 14:32 | kgv | Severity | minor => trivial |
2016-09-23 14:32 | kgv | Status | new => assigned |
2016-09-23 15:40 | git | Note Added: 0058080 | |
2016-09-23 15:41 |
|
Note Added: 0058081 | |
2016-09-23 15:41 |
|
Assigned To | vpa => kgv |
2016-09-23 15:41 |
|
Status | assigned => resolved |
2016-09-23 15:41 |
|
Steps to Reproduce Updated | |
2016-09-23 15:43 | kgv | Note Added: 0058082 | |
2016-09-23 15:43 | kgv | Assigned To | kgv => bugmaster |
2016-09-23 15:43 | kgv | Status | resolved => reviewed |
2016-09-23 16:19 |
|
Assigned To | bugmaster => mkv |
2016-09-26 12:12 |
|
Note Added: 0058150 | |
2016-09-26 12:13 |
|
Note Added: 0058151 | |
2016-09-26 12:13 |
|
Assigned To | mkv => vpa |
2016-09-26 12:13 |
|
Status | reviewed => assigned |
2016-09-26 12:13 |
|
Test case number | => bugs vis bug27893 |
2016-09-26 20:34 | git | Note Added: 0058187 | |
2016-09-26 20:35 |
|
Status | assigned => resolved |
2016-09-26 20:35 |
|
Note Added: 0058188 | |
2016-09-26 20:35 |
|
Assigned To | vpa => bugmaster |
2016-09-26 20:35 |
|
Status | resolved => reviewed |
2016-09-27 12:02 |
|
Assigned To | bugmaster => mkv |
2016-09-28 15:31 |
|
Note Added: 0058267 | |
2016-09-28 15:33 |
|
Note Added: 0058269 | |
2016-09-28 15:33 |
|
Assigned To | mkv => bugmaster |
2016-09-28 15:33 |
|
Status | reviewed => tested |
2016-10-03 13:47 | kgv | Changeset attached | => occt master 0d5880e1 |
2016-10-03 13:47 | kgv | Assigned To | bugmaster => kgv |
2016-10-03 13:47 | kgv | Status | tested => verified |
2016-10-03 13:47 | kgv | Resolution | open => fixed |
2016-10-28 21:42 | git | Note Added: 0059456 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |